--- a/Actors_List_Trial1/app/src/main/res/layout/activity_detail.xml
+++ b/Actors_List_Trial1/app/src/main/res/layout/activity_detail.xml
@@ -8,14 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ly.generalassemb.actors_list_trial1.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is a list of Actors!!"/>
+    tools:context="ly.generalassemb.actors_list_trial1.DetailActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
