--- a/Actors_List_Trial1/app/src/main/res/layout/list_item.xml
+++ b/Actors_List_Trial1/app/src/main/res/layout/list_item.xml
@@ -5,8 +5,18 @@
               android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/actor_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/actor_age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/actor_sex"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
