--- a/Actors_List_Trial1/app/src/main/res/layout/activity_main.xml
+++ b/Actors_List_Trial1/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:text="This is a list of Actors!!"/>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
