--- a/Actors_List_Trial1/app/src/main/res/layout/activity_main.xml
+++ b/Actors_List_Trial1/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ly.generalassemb.actors_list_trial1.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is a list of Actors!!"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
