--- a/Actors_List_Trial1/app/src/main/res/layout/list_item.xml
+++ b/Actors_List_Trial1/app/src/main/res/layout/list_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/actor_name"
@@ -12,11 +12,15 @@
     <TextView
         android:id="@+id/actor_age"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/actor_name"
+        />
 
     <TextView
         android:id="@+id/actor_sex"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/actor_age"
+        />
 
-</LinearLayout>
+</RelativeLayout>
