--- a/Actors_List_Trial1/app/src/main/res/layout/activity_detail.xml
+++ b/Actors_List_Trial1/app/src/main/res/layout/activity_detail.xml
@@ -10,8 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ly.generalassemb.actors_list_trial1.DetailActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+    <ImageView
+        android:id="@+id/actor_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
